Blender crashes when rendering the attached file #33815

Closed
opened 2013-01-09 12:32:03 +01:00 by Rodrigo Ledig · 4 comments

%%%Blender crashes when rendering the attached file. I don't know if it's specific to Cycles since I'm mixing both renders in the compositor. Just open the file hit F12 and see for yourself. Tested on Windows 7 and Gento Linux (official binaries) with 2.65a version.

FYI

  • If you remove the particles from the mesh, Blender stops crashing.
  • If you disable some of the passes in the Render Layers pannel, Blender also stops crashing.

Machine
CPU: Intel(R) Core(TM) i3-2100 CPU @ 3.10GHz (4 CPUs), ~3.1GHz
RAM: 8192 MB
GFX: NVIDIA GeForce GT 220, 1024 MB
OS: Windows 7 Ultimate 64-bit (6.1, Build 7601) Service Pack 1 & Gentoo Linux x86_64
Drivers: Windows - nVidia 9.18.13.697 (Final Rettail), Gentoo - Nouveau kernel 3.7.1
Blender: 2.65a
%%%

%%%Blender crashes when rendering the attached file. I don't know if it's specific to Cycles since I'm mixing both renders in the compositor. Just open the file hit F12 and see for yourself. Tested on Windows 7 and Gento Linux (official binaries) with 2.65a version. FYI * If you remove the particles from the mesh, Blender stops crashing. * If you disable some of the passes in the Render Layers pannel, Blender also stops crashing. Machine CPU: Intel(R) Core(TM) i3-2100 CPU @ 3.10GHz (4 CPUs), ~3.1GHz RAM: 8192 MB GFX: NVIDIA GeForce GT 220, 1024 MB OS: Windows 7 Ultimate 64-bit (6.1, Build 7601) Service Pack 1 & Gentoo Linux x86_64 Drivers: Windows - nVidia 9.18.13.697 (Final Rettail), Gentoo - Nouveau kernel 3.7.1 Blender: 2.65a %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Happens when doing strand render with material index pass. Here's a patch which prevents the crash, but not sure it's fully correct (not sure if strands are supposed to generate any render faces). Brecht, could you please check on this?%%%

%%%Happens when doing strand render with material index pass. Here's a patch which prevents the crash, but not sure it's fully correct (not sure if strands are supposed to generate any render faces). Brecht, could you please check on this?%%%

%%%Strands are handled here as well, so they should write to the material pass. Committed fix now based on the patch.%%%

%%%Strands are handled here as well, so they should write to the material pass. Committed fix now based on the patch.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33815
No description provided.