Fix #33815: blender internal crash rendering material pass with strands.

Patch from Sergey with modifications.